Fix screenshots on projects page overflowing page width

--- a/css/projects.css
+++ b/css/projects.css
@@ -30,3 +30,8 @@ p {
 ul {
     margin-left: 30px;
 }
+@media (max-width: 680px) {
+    .screenshots img {
+        max-width: 100%;
+    }
+}
